--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -13,6 +13,7 @@ build.generated.sources.dir=${build.dir}/generated-sources
 # Only compile against the classpath explicitly listed here:
 build.sysclasspath=ignore
 build.test.classes.dir=${build.dir}/test/classes
+build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
 # Uncomment to specify the preferred debugger connection transport:
 #debug.transport=dt_socket
@@ -32,10 +33,28 @@ dist.jar=${dist.dir}/InventarioPharmaBlock.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/InventarioPharmaBlock
+endorsed.classpath=
 excludes=
+# ---------------------------------------------------------------------------------
+# REFERENCIAS CORREGIDAS: Todos los JARs están en la carpeta 'lib'.
+# ---------------------------------------------------------------------------------
+file.reference.bcprov=lib/bcprov-jdk18on-1.82.jar
+file.reference.bcpkix=lib/bcpkix-jdk18on-1.82.jar
+file.reference.postgresql=lib/postgresql-42.7.8.jar
+# file.reference.Escritorio-Bouncy_Castle=..\\..\\..\\Bouncy Castle (ELIMINADA)
+# file.reference.InventarioPharmaBlock-lib=lib (ELIMINADA)
+# file.reference.postgresql-42.7.8.jar=..\\..\\..\\postgresql-42.7.8.jar (ELIMINADA)
+# ---------------------------------------------------------------------------------
 includes=**
 jar.compress=false
-javac.classpath=
+# ---------------------------------------------------------------------------------
+# JAVAC CLASSPATH CORREGIDO: Incluye TODOS los JARs de la carpeta lib.
+# ---------------------------------------------------------------------------------
+javac.classpath=\
+    ${file.reference.bcprov}:\
+    ${file.reference.bcpkix}:\
+    ${file.reference.postgresql}
+# ---------------------------------------------------------------------------------
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,7 +90,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=InventarioPharmaBlock
-main.class=inventariopharmablock.InventarioPharmaBlock
+main.class=vista.FarmaciaApp
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
